@@ -1,5 +1,11 @@
 2008-02-24  Dominic Lachowicz <domlachowicz@gmail.com>
 
+	* rsvg-text.c:
+	* rsvg-styles.h:
+	* rsvg-styles.c: Handle xml:space="prserve" (#353609)
+	
+2008-02-24  Dominic Lachowicz <domlachowicz@gmail.com>	
+
 	* rsvg-path.c (rsvg_parse_path_do_cmd): If a moveto is followed by 
 	multiple pairs of coordinates, the subsequent pairs are treated as 
 	implicit lineto commands. (#482787)
